# TiMultiServerSupport

./: .gitattributes  .gitignore  README.md  build.bat  build.sh
.github/workflows/: Windows.yml
3rd/cppzmq/: zmq_addon.hpp
3rd/zeromq/: CMakeLists.txt
3rd/zeromq/zeromq-4.3.3/: CMakeLists.txt
BuildScript/: build_msvc.bat  config.bat
include/: BasicType.hpp  Communicator.hpp  MultiServerSupport.hpp  Serializer.hpp  TiMultiServerSupport.hpp  TiRPC.hpp
include/tmss/: MultiServerSupportBase.hpp  RpcAsyncBroadcast.hpp  RpcBasicTemplate.hpp  RpcProcessRequest.hpp  RpcProcessResponse.hpp  Singleton.hpp  StatusSyncDataSet.hpp  StatusSyncPrimary.hpp  StatusSyncSecondary.hpp  TiMultiServerSupport.inl  TiMultiServerSupportImpl.inl
include/tmss/communicator/: CommunicationCode.hpp  Communicator.hpp
include/tmss/communicator/reqrep/: Requester.hpp  Responder.hpp
include/tmss/communicator/subpub/: Publisher.hpp  Subscriber.hpp
include/tmss/serializer/: FunctionSerializer.hpp  Serializer.hpp  SyncDataSerializer.hpp
script/: TiRPC.cmake  build_linux.sh  build_msvc.bat  ci.bat  ci.sh  clean.sh  config.bat
src/: CMakeLists.txt
src/OnlineTable/: CMakeLists.txt  build.bat  config.bat
src/OnlineTable/3rd/: .gitignore
src/TestBroadcastRpc/: CMakeLists.txt  TestBroadcastRpc.cpp
src/TestStandardRpc/: CMakeLists.txt  TestStandardRpcClient.cpp  TestStandardRpcServer.cpp
